exports[`no-empty-interface > invalid 1`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-interface",
      "messageId": "noEmpty",
      "message": "An empty interface is equivalent to \`{}\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 11
        },
        "end": {
          "line": 1,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-empty-interface > invalid 10`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-interface",
      "messageId": "noEmptyWithSuper",
      "message": "An interface declaring no members is equivalent to its supertype.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 11
        },
        "end": {
          "line": 3,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-empty-interface > invalid 11`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-interface",
      "messageId": "noEmptyWithSuper",
      "message": "An interface declaring no members is equivalent to its supertype.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 11
        },
        "end": {
          "line": 2,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-empty-interface > invalid 12`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-interface",
      "messageId": "noEmptyWithSuper",
      "message": "An interface declaring no members is equivalent to its supertype.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 20
        },
        "end": {
          "line": 4,
          "column": 23
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-empty-interface > invalid 2`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-interface",
      "messageId": "noEmpty",
      "message": "An empty interface is equivalent to \`{}\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 11
        },
        "end": {
          "line": 1,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-empty-interface > invalid 3`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-interface",
      "messageId": "noEmptyWithSuper",
      "message": "An interface declaring no members is equivalent to its supertype.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 6,
          "column": 11
        },
        "end": {
          "line": 6,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-empty-interface > invalid 4`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-interface",
      "messageId": "noEmptyWithSuper",
      "message": "An interface declaring no members is equivalent to its supertype.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 6,
          "column": 11
        },
        "end": {
          "line": 6,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-empty-interface > invalid 5`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-interface",
      "messageId": "noEmptyWithSuper",
      "message": "An interface declaring no members is equivalent to its supertype.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 6,
          "column": 11
        },
        "end": {
          "line": 6,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-empty-interface > invalid 6`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-interface",
      "messageId": "noEmptyWithSuper",
      "message": "An interface declaring no members is equivalent to its supertype.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 6,
          "column": 11
        },
        "end": {
          "line": 6,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-empty-interface > invalid 7`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-interface",
      "messageId": "noEmptyWithSuper",
      "message": "An interface declaring no members is equivalent to its supertype.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 11
        },
        "end": {
          "line": 1,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-empty-interface > invalid 8`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-interface",
      "messageId": "noEmptyWithSuper",
      "message": "An interface declaring no members is equivalent to its supertype.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 11
        },
        "end": {
          "line": 1,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-empty-interface > invalid 9`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-interface",
      "messageId": "noEmptyWithSuper",
      "message": "An interface declaring no members is equivalent to its supertype.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 5,
          "column": 11
        },
        "end": {
          "line": 5,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;
